[gd_scene load_steps=4 format=3 uid="uid://gfgn88e8sf8i"]

[ext_resource type="Script" uid="uid://d1bsy8u7qsn1k" path="res://addons/escoria-ui-gamepad/inventory/inventory_ui.gd" id="1_yrt0x"]
[ext_resource type="Texture2D" uid="uid://yegfvvcmtdnp" path="res://addons/escoria-ui-simplemouse/images/inventory_panel.png" id="2_a2le7"]
[ext_resource type="Script" uid="uid://c4syt26p7mg66" path="res://addons/escoria-core/ui_library/inventory/esc_inventory_container.gd" id="3_ijtmm"]

[node name="inventory_ui" type="Control"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 900.0
size_flags_horizontal = 0
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_yrt0x")
inventory_ui_container = NodePath("panel/MarginContainer/ScrollContainer/container")

[node name="panel" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 160)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 866.0
offset_bottom = 1060.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_a2le7")

[node name="Label" type="Label" parent="panel"]
layout_mode = 2
offset_left = 75.0
offset_top = 6.0
offset_right = 315.0
offset_bottom = 29.0
text = "INVENTORY_LABEL"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="panel"]
layout_mode = 2
offset_top = 34.0
offset_right = 1280.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="container" type="HBoxContainer" parent="panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 20
script = ExtResource("3_ijtmm")

[node name="detector_in" type="Control" parent="panel"]
anchors_preset = 0
offset_right = 1281.0
offset_bottom = 34.0
mouse_filter = 1

[node name="detector_out" type="Control" parent="panel"]
layout_mode = 1
anchor_top = -4.469
anchor_right = 1.0
anchor_bottom = 0.18
offset_top = -0.013916
offset_bottom = -36.92
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[connection signal="mouse_entered" from="panel/detector_in" to="." method="detector_in"]
[connection signal="gui_input" from="panel/detector_out" to="." method="_on_detector_out_gui_input"]
[connection signal="mouse_entered" from="panel/detector_out" to="." method="detector_out"]
